--- a/GravityWords/Styles/styles.css
+++ b/GravityWords/Styles/styles.css
@@ -5,11 +5,11 @@
     font-family: sans-serif;
     font-size: 10px;
     letter-spacing: 1.15px;
-    user-select: none;
+    user-select: none; /* Disable text selection */
 }
 
 body {
-    /* overflow: hidden; */
+    overflow: hidden; /* Hide overflow content */
 }
 
 /* Background canvas style */
@@ -18,7 +18,7 @@ body {
     top: 0;
     left: 0;
     background-color: black;
-    z-index: -1;
+    z-index: -1; /* Behind other elements */
 }
 
 /* Title style */
@@ -26,13 +26,13 @@ body {
     text-align: center;
     padding: 20px;
     background-color: rgba(39, 39, 39, 0.46);
-    backdrop-filter: blur(10px);
+    backdrop-filter: blur(10px); /* Blur effect */
 }
 
 h1 {
-    font-size: 6rem;
+    font-size: 10rem;
     color: #2a2a2a;
-    transition: color 2s;
+    transition: color 2s; /* Smooth color transition */
 }
 
 /* Play Button style */
@@ -107,13 +107,23 @@ h1 {
     text-align: center;
 }
 
+#difficulty-section, #theme-section {
+    width: 50%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
 #difficulty-section > label, #theme-section > label {
     font-size: 3rem;
     font-weight: 600;
-    margin-bottom: 20px;
 }
 
-#difficulty-container > p, .theme-wrapper > label {
+#difficulty-text-container {
+    width: 50px;
+}
+
+#difficulty-container > #difficulty-text-container > p, .theme-wrapper > label {
     font-size: 2rem;
     font-weight: bold;
 }
